fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -14,13 +14,15 @@ body {
 
 h1, h2, h3, p {
     color: white;
+    margin-bottom: 10px;
     text-align: center;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3)
 }
 h3 {
     font-size: 32px; 
     font-weight: bold; 
-    margin-top: 10px; 
+    margin-top: 0px; 
+    margin-bottom: 5px;
 }
 
 p {
@@ -43,8 +45,8 @@ header {
     gap: 12px;
     width: 600px;
     height: 350px;
-    margin-top: 5px;
-    margin-bottom: 15px;
+    margin-top: -5px;
+    margin-bottom: 20px;
   }
   
   .card {
@@ -54,7 +56,7 @@ header {
     align-items: center;
     justify-content: center;
     border: 3px solid black;
-    font-size: 48px;
+    font-size: 42px;
     text-align: center;
     border-radius: 10px;
     background-color: transparent; /* Ensures background stays consistent */
@@ -68,6 +70,9 @@ header {
     height: 100%;
     transition: transform 0.8s;
     transform-style: preserve-3d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .card.is-flipped .card-inner {    
@@ -102,7 +107,7 @@ header {
 
   #replay {
     display: none;
-    margin-top: 15px;
+    margin-top: -15px;
     margin-bottom: 10px;
     padding: 10px 20px;
     font-size: 28px;
